CloudNativeExplorer/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: todo-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: todo-tls-secret
    hosts:
    - todo.example.com
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - todo.example.com
    tls:
      httpsRedirect: true
